# TorusCSIDH

./: Cargo.toml  Makefile  README.md  User_manual.md  modular_reduction.c
.github/workflows/: main.yml  verification.yml
V2.0/: CMakeLists.txt  Readme.md
V2.0/Toruscsidh/: bech32m.h  code_integrity.h  code_integrity_protection.h  elliptic_curve.h  geometric_validator.h  postquantum_hash.h  rfc6979_rng.h  secure_audit_logger.h  secure_random.h  security_constants.h  toruscsidh.h
V2.0/scr/: bech32m.cpp  code_integrity.cpp  code_integrity_protection.cpp  elliptic_curve.cpp  geometric_validator.cpp  main.cpp  postquantum_hash.cpp  rfc6979_rng.cpp  secure_audit_logger.cpp  secure_random.cpp  security_constants.cpp  toruscsidh.cpp
V2.0/tests/: CMakeLists.txt  test_bech32m.cpp  test_elliptic_curve.cpp  test_geometric_validator.cpp  test_geometric_valudator.cpp
V2.0/toruscsidh/: bech32m.h  code_integrity.h  elliptic_curve.h  geometric_validator.h  postquantum_hash.h  secure_audit_logger.h  security_constants.h  toruscsidh.h
benches/: full_verification.rs
docker/production/: Dockerfile
docs/: Code of Conduct.md  Contributing.md  User Manual.md  User_Manual.md  audit_documentation.md  contribution guidelines.md  technical specification.md  technical_specification.md
include/math/:  modular_reduction.h  constants.h  fp.h  fp2_arithmetic.h  fp_arithmetic.h
openssl_integration/: toruscsidh_kem.c
proofs/arithmetic/fp_arithmetic/: Fp_Correctness.v
proofs/elliptic_curves/: Curve_Correctness.v  Isogeny_Correctness.v
proofs/fp_arithmetic/: Fp2_Correctness.v  Fp_Correctness.v
proofs/security/: AdaptiveSecurity.v  AttackPrediction.v  KeyExchange_Security.v  SSI_Reduction.v  SelfHealing.v
scr/: CMakeLists.txt  Doxyfile  Update.md  build_and_run.sh  dockerfile  main  main.cpp  run_tests.sh  toruscsidh.cpp  toruscsidh.h  update.cpp  update_instructions.md
scr/Update/: Update_Instructions.md  update_instructions.cpp
scripts/: final_validation.sh  health_check.sh  release.sh  security_checks.sh  verification_pipeline.sh
src/: errors.rs  params.rs
src/arithmetic/: fp.rs  fp2.rs
src/curves/: elliptic_curve.rs  geometric_verification.rs  isogeny_kernel.rs
src/math/: constants.c  fp.py  fp2_arithmetic.c  fp_arithmetic.c  modular_reduction.c
src/protocols/: key_exchange.rs
src/security/: adaptive_security.rs  attack_prediction.rs  self_healing.rs
tests/: system_tests.c
tests/integration/: key_exchange.rs
